# CLINISCRIBE

./: .env.example  .gitattributes  .gitignore
audio_storage/2025-12-24/: 0137c792-b562-4144-bd6a-7881ccf855f9_call_clip.m4a
client/web-react/src/api/: cliniscribe.js
client/web-react/src/components/: UploadCard.jsx
desktop-app/: ARCHITECTURE.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  USER_GUIDE.md  index.html  package.json  tailwind.config.js  vite.config.ts
desktop-app/build-scripts/: bundle-python.sh  download-ollama.sh
desktop-app/installers/: OFFLINE_INSTALLERS.md  ONE_CLICK_INSTALLERS.md  build-all.bat  build-all.sh  bundle-models.sh
desktop-app/installers/linux/: build-deb.sh
desktop-app/installers/macos/: HOMEBREW_DISTRIBUTION.md  build-dmg.sh  build-pkg.sh  cliniscribe.rb
desktop-app/installers/macos/pkg-build/: CogniScribe-component.pkg  conclusion.html  distribution.xml  license.txt  readme.html  welcome.html
desktop-app/installers/output/macos/: CliniScribe-1.0.0.pkg  (+2 more)
desktop-app/installers/windows/: build.bat  cliniscribe.nsi
desktop-app/src/: App.tsx
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: config.rs  main.rs  model_downloader.rs  process_manager.rs
desktop-app/src-tauri/src/obs/: config_writer.rs  manager.rs
desktop-app/src/components/: LoadingSpinner.tsx
desktop-app/src/styles/: index.css
docs/: AUDIO_COMPONENTS.md
examples/: client_example.py
src/api/routers/: pipeline.py
src/api/services/: audio_preprocess.py
src/utils/: settings.py
(+12 files in other folders)
